--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,12 @@ workflows:
     "Hello Workflow":
         jobs:
           - hello/hello-build
+
+version: 2
+jobs:
+  build:
+    docker: # Executor タイプです。他に machine、macOS という実行タイプを指定できます
+      - image: circleci/node:4.8.2 # プライマリコンテナです。このなかでジョブコマンドが実行されます
+    steps:
+      - checkout # プロジェクトのディレクトリにあるコードをチェックアウトします
+      - run: echo "hello world" # 「echo」コマンドを実行します
